server/k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway 
          image: irhadudheen/api-gateway-levelup:latest

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-srv
spec:
  type: NodePort
  selector:
    app: api-gateway 
  ports:
    - name: api-gateway-srv-port
      protocol: TCP
      port: 4001 
      targetPort: 4001
