server/k8s/auth-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth 
          image: irhadudheen/auth-levelup:latest

---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: NodePort
  selector:
    app: auth 
  ports:
    - name: auth-srv-port
      protocol: TCP
      port: 4000 
      targetPort: 4000
