server/k8s/payment-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment 
          image: irhadudheen/payment-levelup:latest

---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
spec:
  type: NodePort
  selector:
    app: payment 
  ports:
    - name: payment-srv-port
      protocol: TCP
      port: 3001 
      targetPort: 3001
